crates/hir-ty/tests/snapshots/jls_source_level__pattern_switch_at_20_is_reported.snap
---
source: crates/hir-ty/tests/jls_source_level.rs
expression: out
---
FILE /src/com/example/PatternSwitch.java:
package com.example;

class A {
    void m(Object o) {
        switch (o) {
            case String s -> {}
            default -> {}
        }
    }
}

@5:12: feature-not-supported-in-source-level: patterns in switch statements are not supported in source level 20 (use source level 21 or higher to enable patterns in switch statements)
