crates/hir-ty/tests/snapshots/jls_source_level__primitive_pattern_at_23_with_preview_is_legal.snap
---
source: crates/hir-ty/tests/jls_source_level.rs
expression: out
---
FILE /src/com/example/PrimitivePattern.java:
package com.example;

class A {
    int m(Object o) {
        return switch (o) {
            case int i -> i;
            default -> 0;
        };
    }
}
