crates/hir-ty/tests/snapshots/jls_source_level__primitive_pattern_below_21_with_preview_is_reported.snap
---
source: crates/hir-ty/tests/jls_source_level.rs
expression: out
---
FILE /src/com/example/PrimitivePattern.java:
package com.example;

class A {
    int m(Object o) {
        return switch (o) {
            case int i -> i;
            default -> 0;
        };
    }
}

@5:12: feature-not-supported-in-source-level: patterns in switch statements are not supported in -source 20 (use -source 21 or higher to enable patterns in switch statements)
