crates/hir-ty/tests/snapshots/jls_source_level__private_class_method_is_never_reported.snap
---
source: crates/hir-ty/tests/jls_source_level.rs
expression: out
---
FILE /src/com/example/PrivateClassMethod.java:
package com.example;

class A {
    private int x() {
        return 1;
    }
}
