crates/hir-ty/tests/snapshots/jls_source_level__private_interface_method_at_8_is_reported.snap
---
source: crates/hir-ty/tests/jls_source_level.rs
expression: out
---
FILE /src/com/example/PrivateInterfaceMethod.java:
package com.example;

interface I {
    private int x() {
        return 1;
    }
}

@3:4: feature-not-supported-in-source-level: private interface methods are not supported in source level 8 (use source level 9 or higher to enable private interface methods)
