crates/hir-ty/tests/snapshots/jls_source_level__private_interface_method_at_9_is_legal.snap
---
source: crates/hir-ty/tests/jls_source_level.rs
expression: out
---
FILE /src/com/example/PrivateInterfaceMethod.java:
package com.example;

interface I {
    private int x() {
        return 1;
    }
}
