crates/hir-ty/tests/snapshots/jls_source_level__record_pattern_in_instanceof_at_20_is_reported.snap
---
source: crates/hir-ty/tests/jls_source_level.rs
expression: out
---
FILE /src/com/example/RecordPattern.java:
package com.example;

class A {
    record Point(int x, int y) {}

    void m(Object o) {
        if (o instanceof Point(int x, int y)) {
        }
    }
}

@6:25: feature-not-supported-in-source-level: deconstruction patterns are not supported in source level 20 (use source level 21 or higher to enable deconstruction patterns)
