crates/hir-ty/tests/snapshots/jls_source_level__record_pattern_in_instanceof_at_21_is_legal.snap
---
source: crates/hir-ty/tests/jls_source_level.rs
expression: out
---
FILE /src/com/example/RecordPattern.java:
package com.example;

class A {
    record Point(int x, int y) {}

    void m(Object o) {
        if (o instanceof Point(int x, int y)) {
        }
    }
}
